--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -1,516 +1,514 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
 :root {
-    font-family: century gothic, Inter, system-ui, Avenir, Helvetica, Arial,
-      sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-    font-size: 15px;
+  font-family: "Montserrat", century gothic, Inter, system-ui, Avenir, Helvetica,
+    Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  font-size: 15px;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  gap: 10px;
+}
+
+/* input */
+.input-group {
+  display: flex;
+  border: 1px solid #808080;
+  border-radius: 5px;
+  font-size: 14px;
+  width: 100%;
+}
+.input-field {
+  border: none;
+  padding-left: 5px;
+  font-size: 15px;
+  width: 100%;
+}
+.input-field:focus {
+  outline: none;
+}
+.input-icon,
+.input-text {
+  padding: 2px 5px;
+}
+.input-icon {
+  border-right: 1px solid #808080;
+  background-color: #6161552f;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.input-text {
+  border-left: 1px solid #808080;
+}
+/* input field error */
+.error-field {
+  border: 1px solid #ff3547;
+  color: #ff3547;
+}
+.error-text {
+  color: #dd2e2e;
+  font-size: 13px;
+  font-weight: bold;
+}
+/* button */
+button.btn-loading {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-width: 100%;
+  padding: 0px;
+}
+.btn-loading.primary {
+  background: #4285f4;
+  border: 1px solid #4285f4;
+  color: #ffffff;
+}
+button .btn-img {
+  width: 50px;
+  height: 30px;
+  border-radius: 50%;
+  display: block;
+}
+button {
+  padding: 8px 36px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button.btn-primary {
+  background: #4285f4;
+  border: 1px solid #4285f4;
+  color: #ffffff;
+}
+button.btn-primary-outline {
+  background: #ffffff;
+  border: 1px solid #4285f4;
+  color: black;
+}
+button.btn-primary-outline:hover,
+button.btn-primary-outline:active {
+  background: #4285f4;
+  border: 1px solid #4285f4;
+  color: #ffffff;
+}
+
+button.btn-success {
+  background: #00c851;
+  border: 1px solid #00c851;
+  color: #ffffff;
+}
+button.btn-success-outline {
+  background: #ffffff;
+  border: 1px solid #00c851;
+  color: #00c851;
+}
+button.btn-success-outline:hover {
+  background: #00c851;
+  border: 1px solid #00c851;
+  color: #ffffff;
+}
+button.btn-success-outline:active {
+  background: #ffffff;
+  border: 1px solid #00c851;
+  color: #00c851;
+}
+
+button.btn-warning {
+  background: #ffbb33;
+  border: 1px solid #ffbb33;
+  color: black;
+}
+button.btn-warning-outline {
+  background: #ffffff;
+  border: 1px solid #ffbb33;
+  color: black;
+}
+button.btn-warning-outline:hover,
+button.btn-warning-outline:active {
+  background: #ffbb33;
+  border: 1px solid #ffbb33;
+  color: #ffffff;
+}
+
+button.btn-danger {
+  background: #ff3547;
+  border: 1px solid #ff3547;
+  color: #ffffff;
+}
+button.btn-danger-outline {
+  background: #ffffff;
+  border: 1px solid #ff3547;
+  color: black;
+}
+button.btn-danger-outline:hover,
+button.btn-danger-outline:active {
+  background: #ff3547;
+  border: 1px solid #ff3547;
+  color: #ffffff;
+}
+
+button.btn-dark {
+  background: #212121;
+  border: 1px solid #212121;
+  color: #ffffff;
+}
+button.btn-dark-outline {
+  background: #ffffff;
+  border: 1px solid #212121;
+  color: black;
+}
+button.btn-dark-outline:hover,
+button.btn-dark-outline:active {
+  background: #212121;
+  border: 1px solid #212121;
+  color: #ffffff;
+}
+
+button.btn-light {
+  background: #e0e0e0;
+  border: 1px solid #e0e0e0;
+  color: #ffffff;
+}
+button.btn-lighter {
+  background: #ffffff;
+  border: 1px solid #ffffff;
+  color: black;
+}
+button.btn-outline-lighter {
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  color: white;
+  opacity: 0.9;
+}
+button.btn-outline-lighter:hover {
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  color: black;
+}
+button.btn-outline-lighter:active {
+  background-color: rgba(247, 211, 144, 0.795);
+  border: 1px solid #ffffff;
+  color: white;
+  opacity: 0.9;
+}
+button.btn-light:active {
+  background: #e0e0e0;
+  border: 1px solid #e0e0e0;
+  color: #ffffff;
+}
+button.btn-google {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff;
+  border: 1px solid #ffffff;
+  color: black;
+}
+.google-icon {
+  display: block;
+  width: 30px;
+  height: 18px;
+}
+
+/* card */
+.card-a {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.card-header,
+.card-footer {
+  padding: 10px;
+}
+.card-body {
+  padding: 20px;
+}
+.card-header {
+  text-align: center;
+  border-bottom: 1px solid #80808080;
+}
+/* form */
+.form {
+  display: flex;
+  flex-direction: column;
+}
+/* text */
+.text-danger {
+  color: #ff3547;
+}
+.text-success {
+  color: #00c851;
+}
+.text-warning {
+  color: #b47b10;
+}
+.text-primary {
+  color: #3c5df1;
+}
+.fa-pen-to-square {
+  cursor: pointer;
+}
+.fa-pen-to-square:active {
+  color: white;
+}
+.fa-pencil {
+  cursor: pointer;
+}
+.fa-pencil:active {
+  color: white;
+}
+/* message */
+.success-message {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(149, 233, 149);
+  border-radius: 5px;
+  color: black;
+}
+.error-message {
+  display: flex;
+  flex-direction: column;
+  background-color: #ff3547;
+  color: white;
+  border-radius: 5px;
+}
+
+.remove-message {
+  cursor: pointer;
+}
+.remove-message:active {
+  color: white;
+}
+
+/* loading image */
+.loader {
+  width: 40%;
+  position: absolute;
+  top: 32%;
+  left: 25%;
+}
+.loader img {
+  width: 100%;
+  height: auto;
+  display: block;
+  opacity: 0.5;
+  border-radius: 80%;
+}
+
+/* avoid wrapping text */
+a,
+.nowrap {
+  white-space: nowrap;
+}
+
+.icon-click {
+  cursor: pointer;
+}
+.icon-click:active {
+  color: white;
+}
+
+/* dropdown */
+.dropdown {
+  position: absolute;
+  top: 40px;
+  right: 10px;
+  width: 250px;
+  z-index: 1;
+}
+.dropdown .buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.dropdown .btn-light {
+  color: black;
+  border: 1px solid rgb(104, 102, 102);
+}
+.dropdown .btn-light:hover,
+.dropdown .btn-dark:hover {
+  background: #ffffff;
+  border: 1px solid #212121;
+  color: black;
+}
+.caret-down .fa:hover {
+  color: white;
+  cursor: pointer;
+}
+
+/* table */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  font-size: 14px;
+}
+caption,
+th,
+td {
+  padding: 10px;
+  text-align: left;
+}
+caption {
+  text-align: center;
+}
+caption,
+th {
+  font-weight: 700;
+}
+@media (max-width: 650px) {
+  th {
+    display: none;
   }
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* font-family: 'Montserrat', sans-serif; */
-  }
-  .app-container {
+  td {
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    gap: 10px;
-  }
-  
-  /* input */
-  .input-group {
-    display: flex;
-    border: 1px solid #808080;
-    border-radius: 5px;
-    font-size: 14px;
-    width: 100%;
-  }
-  .input-field {
-    border: none;
-    padding-left: 5px;
-    font-size: 15px;
-    width: 100%;
-  }
-  .input-field:focus {
-    outline: none;
-  }
-  .input-icon,
-  .input-text {
-    padding: 2px 5px;
-  }
-  .input-icon {
-    border-right: 1px solid #808080;
-    background-color: #6161552f;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
-  .input-text {
-    border-left: 1px solid #808080;
-  }
-  /* input field error */
-  .error-field {
-    border: 1px solid #ff3547;
-    color: #ff3547;
-  }
-  .error-text {
-    color: #dd2e2e;
-    font-size: 13px;
-    font-weight: bold;
-  }
-  /* button */
-  button.btn-loading {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-width: 100%;
-    padding: 0px;
-  }
-  .btn-loading.primary {
-    background: #4285f4;
-    border: 1px solid #4285f4;
-    color: #ffffff;
-  }
-  button .btn-img {
-    width: 50px;
-    height: 30px;
-    border-radius: 50%;
-    display: block;
-  }
-  button {
-    padding: 8px 36px;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  button.btn-primary {
-    background: #4285f4;
-    border: 1px solid #4285f4;
-    color: #ffffff;
-  }
-  button.btn-primary-outline {
-    background: #ffffff;
-    border: 1px solid #4285f4;
-    color: black;
-  }
-  button.btn-primary-outline:hover,
-  button.btn-primary-outline:active {
-    background: #4285f4;
-    border: 1px solid #4285f4;
-    color: #ffffff;
-  }
-  
-  button.btn-success {
-    background: #00c851;
-    border: 1px solid #00c851;
-    color: #ffffff;
-  }
-  button.btn-success-outline {
-    background: #ffffff;
-    border: 1px solid #00c851;
-    color: #00c851;
-  }
-  button.btn-success-outline:hover {
-    background: #00c851;
-    border: 1px solid #00c851;
-    color: #ffffff;
-  }
-  button.btn-success-outline:active {
-    background: #ffffff;
-    border: 1px solid #00c851;
-    color: #00c851;
-  }
-  
-  button.btn-warning {
-    background: #ffbb33;
-    border: 1px solid #ffbb33;
-    color: black;
-  }
-  button.btn-warning-outline {
-    background: #ffffff;
-    border: 1px solid #ffbb33;
-    color: black;
-  }
-  button.btn-warning-outline:hover,
-  button.btn-warning-outline:active {
-    background: #ffbb33;
-    border: 1px solid #ffbb33;
-    color: #ffffff;
-  }
-  
-  button.btn-danger {
-    background: #ff3547;
-    border: 1px solid #ff3547;
-    color: #ffffff;
-  }
-  button.btn-danger-outline {
-    background: #ffffff;
-    border: 1px solid #ff3547;
-    color: black;
-  }
-  button.btn-danger-outline:hover,
-  button.btn-danger-outline:active {
-    background: #ff3547;
-    border: 1px solid #ff3547;
-    color: #ffffff;
-  }
-  
-  button.btn-dark {
-    background: #212121;
-    border: 1px solid #212121;
-    color: #ffffff;
-  }
-  button.btn-dark-outline {
-    background: #ffffff;
-    border: 1px solid #212121;
-    color: black;
-  }
-  button.btn-dark-outline:hover,
-  button.btn-dark-outline:active {
-    background: #212121;
-    border: 1px solid #212121;
-    color: #ffffff;
-  }
-  
-  button.btn-light {
-    background: #e0e0e0;
-    border: 1px solid #e0e0e0;
-    color: #ffffff;
-  }
-  button.btn-lighter {
-    background: #ffffff;
-    border: 1px solid #ffffff;
-    color: black;
-  }
-  button.btn-outline-lighter {
-    background-color: transparent;
-    border: 1px solid #ffffff;
-    color: white;
-    opacity: 0.9;
-  }
-  button.btn-outline-lighter:hover {
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
-    color: black;
-  }
-  button.btn-outline-lighter:active {
-    background-color: rgba(247, 211, 144, 0.795);
-    border: 1px solid #ffffff;
-    color: white;
-    opacity: 0.9;
-  }
-  button.btn-light:active {
-    background: #e0e0e0;
-    border: 1px solid #e0e0e0;
-    color: #ffffff;
-  }
-  button.btn-google{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #ffffff;
-    border: 1px solid #ffffff;
-    color: black;
-  }
-  .google-icon{
-    display: block;
-    width: 30px;
-    height: 18px;
-  }
-  
-  /* card */
-  .card-a {
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    background-color: #ffffff;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  }
-  
-  .card-header,
-  .card-footer {
-    padding: 10px;
-  }
-  .card-body {
-    padding: 20px;
-  }
-  .card-header {
-    text-align: center;
-    border-bottom: 1px solid #80808080;
-  }
-  /* form */
-  .form {
-    display: flex;
-    flex-direction: column;
-  }
-  /* text */
-  .text-danger {
-    color: #ff3547;
-  }
-  .text-success {
-    color: #00c851;
-  }
-  .text-warning {
-    color: #b47b10;
-  }
-  .text-primary {
-    color: #3c5df1;
-  }
-  .fa-pen-to-square {
-    cursor: pointer;
-  }
-  .fa-pen-to-square:active {
-    color: white;
-  }
-  .fa-pencil {
-    cursor: pointer;
-  }
-  .fa-pencil:active {
-    color: white;
-  }
-  /* message */
-  .success-message {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(149, 233, 149);
-    border-radius: 5px;
-    color: black;
-  }
-  .error-message {
-    display: flex;
-    flex-direction: column;
-    background-color: #ff3547;
-    color: white;
-    border-radius: 5px;
-  }
-  
-  .remove-message {
-    cursor: pointer;
-  }
-  .remove-message:active {
-    color: white;
-  }
-  
-  /* loading image */
-  .loader {
-    width: 40%;
-    position: absolute;
-    top: 32%;
-    left: 25%;
-  }
-  .loader img {
-    width: 100%;
-    height: auto;
-    display: block;
-    opacity: 0.5;
-    border-radius: 80%;
-  }
-  
-  /* avoid wrapping text */
-  a,
-  .nowrap {
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(216, 213, 213);
     white-space: nowrap;
   }
-  
-  .icon-click {
-    cursor: pointer;
+  tr {
+    border-bottom: 1px solid black;
   }
-  .icon-click:active {
-    color: white;
+  td::before {
+    content: attr(data-cell) ": ";
   }
-  
-  /* dropdown */
-  .dropdown {
-    position: absolute;
-    top: 40px;
-    right: 10px;
-    width: 250px;
-    z-index: 1;
-  }
-  .dropdown .buttons {
-    display: flex;
-    justify-content: space-between;
-  }
-  .dropdown .btn-light {
-    color: black;
-    border: 1px solid rgb(104, 102, 102);
-  }
-  .dropdown .btn-light:hover,
-  .dropdown .btn-dark:hover {
-    background: #ffffff;
-    border: 1px solid #212121;
-    color: black;
-  }
-  .caret-down .fa:hover {
-    color: white;
-    cursor: pointer;
-  }
-  
-  /* table */
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    font-size: 14px;
-  }
-  caption,
-  th,
-  td {
-    padding: 10px;
-    text-align: left;
-  }
-  caption {
-    text-align: center;
-  }
-  caption,
-  th {
-    font-weight: 700;
-  }
-  @media (max-width: 650px) {
-    th {
-      display: none;
-    }
-    td {
-      display: flex;
-      justify-content: space-between;
-      border-bottom: 1px solid rgb(216, 213, 213);
-      white-space: nowrap;
-    }
-    tr {
-      border-bottom: 1px solid black;
-    }
-    td::before {
-      content: attr(data-cell) ": ";
-    }
-  }
-  
-  /* modal */
-  .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .modal-content {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    position: relative;
-    width: 400px;
-  }
-  
-  .modal-header {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    margin-bottom: 20px;
-  }
-  .modal-close-button {
-    position: absolute;
-    top: -15px;
-    left: 100%;
-    text-align: center;
-    cursor: pointer;
-  }
-  .modal-close-button:active {
-    color: #7a8888ee;
-  }
-  
-  /* delete modal */
-  .delete-modal .modal-body {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
-  .delete-modal .info {
-    display: flex;
-    justify-content: space-between;
-    font-size: 14px;
-  }
-  .delete-modal .modal-footer {
-    margin-top: 30px;
-    border-top: 1px solid #707474ee;
-    padding-top: 30px;
-  }
-  .delete-modal .delete-options {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  
-  /* admin profile */
-  article,
-  figure {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    color: #a4a8ad;
-  }
-  figure {
-    gap: 15px;
-  }
-  figure img {
-    display: block;
-    width: 180px;
-    height: auto;
-    border: 1px solid #726241;
-    box-shadow: 1px 3px 1px 2px #726241;
-    border-radius: 50%;
-    padding: 20px;
-  }
-  figcaption {
-    font-weight: bold;
-    font-size: 23px;
-    text-align: center;
-  }
-  article p {
-    text-align: center;
-    font-size: 12px;
-  }
-  /* span */
-  .span {
-    border-radius: 2px;
-    padding: 0px 3px;
-    font-size: small;
-    font-weight: bold;
-  }
-  .span-div {
-    text-align: center;
-  }
-  .span-success {
-    background-color: green;
-    color: white;
-  }
-  .span-dark {
-    background-color: black;
-    color: white;
-  }
-  .span-danger {
-    background-color: rgba(240, 25, 25, 0.986);
-    color: white;
-  }
-  /* content */
-  .content-a {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 0 50px;
-  }
-  /* fieldset */
-  .radio-fieldset {
-    width: 300px;
-    display: flex;
-    justify-content: space-around;
-    margin: auto;
-  }
-  
+}
+
+/* modal */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  position: relative;
+  width: 400px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 20px;
+}
+.modal-close-button {
+  position: absolute;
+  top: -15px;
+  left: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+.modal-close-button:active {
+  color: #7a8888ee;
+}
+
+/* delete modal */
+.delete-modal .modal-body {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.delete-modal .info {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+.delete-modal .modal-footer {
+  margin-top: 30px;
+  border-top: 1px solid #707474ee;
+  padding-top: 30px;
+}
+.delete-modal .delete-options {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* admin profile */
+article,
+figure {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  color: #a4a8ad;
+}
+figure {
+  gap: 15px;
+}
+figure img {
+  display: block;
+  width: 180px;
+  height: auto;
+  border: 1px solid #726241;
+  box-shadow: 1px 3px 1px 2px #726241;
+  border-radius: 50%;
+  padding: 20px;
+}
+figcaption {
+  font-weight: bold;
+  font-size: 23px;
+  text-align: center;
+}
+article p {
+  text-align: center;
+  font-size: 12px;
+}
+/* span */
+.span {
+  border-radius: 2px;
+  padding: 0px 3px;
+  font-size: small;
+  font-weight: bold;
+}
+.span-div {
+  text-align: center;
+}
+.span-success {
+  background-color: green;
+  color: white;
+}
+.span-dark {
+  background-color: black;
+  color: white;
+}
+.span-danger {
+  background-color: rgba(240, 25, 25, 0.986);
+  color: white;
+}
+/* content */
+.content-a {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 0 50px;
+}
+/* fieldset */
+.radio-fieldset {
+  width: 300px;
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+}
