--- a/client/src/assets/category.css
+++ b/client/src/assets/category.css
@@ -32,3 +32,9 @@ table.dashboard-content-table .fa-regular,
 table.dashboard-content-table .fa {
   font-size: 18px;
 }
+.fa-arrow-up-right-from-square:hover{
+  cursor: pointer;
+}
+.fa-arrow-up-right-from-square:active{
+   color: white;
+}
