--- a/client/src/assets/category.css
+++ b/client/src/assets/category.css
@@ -32,9 +32,45 @@ table.dashboard-content-table .fa-regular,
 table.dashboard-content-table .fa {
   font-size: 18px;
 }
-.fa-arrow-up-right-from-square:hover{
+.fa-arrow-up-right-from-square:hover {
   cursor: pointer;
 }
-.fa-arrow-up-right-from-square:active{
-   color: white;
+.fa-arrow-up-right-from-square:active {
+  color: white;
+}
+.modal-pics-contents {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  position: relative;
+  max-width: 800px;
+}
+.modal-pics {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+.card.photos {
+  width: 250px;
+}
+.card.card.photos .buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.card.card.photos .card-header {
+  padding: 0;
+}
+.card.card.photos .card-header img {
+  display: block;
+  width: 100%;
+  height: 100px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.card.card.photos .photo-name {
+  font-size: 10px;
 }
