feat: add new photo to category

--- a/client/src/assets/category.css
+++ b/client/src/assets/category.css
@@ -74,3 +74,20 @@ table.dashboard-content-table .fa {
 .card.card.photos .photo-name {
   font-size: 10px;
 }
+.category-btn-type {
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+}
+.category-btn-type .fa:hover {
+  cursor: pointer;
+}
+.category-btn-type .fa:active {
+  color: white;
+}
+.category-btn-type .fa {
+  border: 1px solid #898f8c;
+  padding: 5px;
+  border-radius: 5px;
+  text-align: center;
+}
