--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -332,7 +332,8 @@ button.btn-google {
 .text-primary {
   color: #3c5df1;
 }
-.fa-pen-to-square, .fa-trash-can {
+.fa-pen-to-square,
+.fa-trash-can {
   cursor: pointer;
 }
 .fa-pen-to-square:active {
@@ -341,7 +342,8 @@ button.btn-google {
 .fa-trash-can:active {
   color: white;
 }
-.fa-pencil,.fa-trash-can {
+.fa-pencil,
+.fa-trash-can {
   cursor: pointer;
 }
 .fa-pencil:active {
@@ -596,4 +598,7 @@ article p {
   align-items: center;
   gap: 20px;
   cursor: pointer;
+}
+.avoid:hover {
+  cursor: not-allowed;
 }
