--- a/client/src/assets/app.css
+++ b/client/src/assets/app.css
@@ -94,3 +94,34 @@ ul.links {
   font-weight: 400;
   font-size: 18px;
 }
+.category-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.category-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  max-width: 800px;
+}
+.grid {
+  width: 150px;
+  height: 150px;
+  border: 4px solid #3882f6;
+  border-radius: 12px;
+  transition: 0.5s ease-in-out;
+}
+.grid:hover {
+  transform: scale(1.04);
+  cursor: pointer;
+}
+.grid img:active {
+  background: #d0d9e6;
+}
+.grid img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
