--- a/client/src/assets/app.css
+++ b/client/src/assets/app.css
@@ -98,30 +98,41 @@ ul.links {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
 }
 .category-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 8px;
   max-width: 800px;
 }
 .grid {
   width: 150px;
   height: 150px;
-  border: 4px solid #3882f6;
+  border: 4px solid #969393;
   border-radius: 12px;
   transition: 0.5s ease-in-out;
+  display: flex;
+  flex-direction: column;
+}
+.grid .cate--text {
+  margin-top: auto;
+  text-align: center;
+  font-size: 12px;
 }
 .grid:hover {
   transform: scale(1.04);
   cursor: pointer;
 }
-.grid img:active {
-  background: #d0d9e6;
-}
+
 .grid img {
   display: block;
   width: 100%;
-  height: 100%;
-  border-radius: 12px;
+  height: 100px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.grid.active {
+  border: 4px solid #3b485a;
+  transform: scale(1.09);
 }
