--- a/client/src/assets/app.css
+++ b/client/src/assets/app.css
@@ -136,3 +136,10 @@ ul.links {
   border: 4px solid #3b485a;
   transform: scale(1.09);
 }
+.logo--home img{
+  display: none;
+  background-color: white;
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
+}
