--- a/client/src/assets/app.css
+++ b/client/src/assets/app.css
@@ -90,6 +90,10 @@ ul.links {
   width: 100px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
+.line-grid {
+  border: 1px solid rgb(221, 218, 218);
+  width: 50px;
+}
 .category-h3 {
   font-weight: 400;
   font-size: 18px;
@@ -136,10 +140,107 @@ ul.links {
   border: 4px solid #3b485a;
   transform: scale(1.09);
 }
-.logo--home img{
+.logo--home img {
   display: none;
   background-color: white;
   width: 100px;
   height: 30px;
   border-radius: 5px;
+}
+.services-list {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 50px;
+  /* background-color: red; */
+}
+.services--header {
+  display: flex;
+  /* color: #526db2; */
+  font-weight: 700;
+  font-size: 25px;
+}
+.services--list {
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: center;
+  align-items: center; */
+  gap: 14px;
+  /* max-width: 1300px; */
+}
+.grid--service {
+  width: 280px;
+  height: 350px;
+  border: 1px solid #969393;
+  border-radius: 12px;
+  transition: 0.5s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 2px 5px 0 rgba(150, 147, 147), 0 2px 10px 0 rgba(150, 147, 147);
+}
+.grid-service-body {
+  padding: 2px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.grid-header {
+  text-align: left;
+  font-weight: bold;
+}
+.grid--service .cate--text {
+  margin-top: auto;
+  text-align: center;
+  font-size: 12px;
+}
+.grid--service:hover {
+  transform: scale(1.04);
+  cursor: pointer;
+}
+
+.grid--service img {
+  display: block;
+  width: 100%;
+  height: 200px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.span-service {
+  /* text-align: center; */
+  display: flex;
+  gap: 2px;
+}
+.grid-service-body ul {
+  list-style: none;
+}
+.grid-service-body li {
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.grid-service-body li i,
+.grid-service-body li span {
+  display: block;
+}
+.btn-grid {
+  background-color: #3882f6;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  width: 100px;
+  text-align: center;
+  margin-left: auto;
+  font-size: 12px;
+}
+/* .btn-grid:hover {
+  background-color: #3882f6;
+  color: white;
+  border: none;
+} */
+.btn-grid:active {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  border: 1px solid black;
 }
