--- a/client/src/assets/app.css
+++ b/client/src/assets/app.css
@@ -205,6 +205,30 @@ ul.links {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
+.grid-image {
+  width: 100%;
+  height: 200px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.grid-mask{
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 200px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.cate-image {
+  width: 100%;
+  height: 100px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.cate-mask{
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 100px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
 .span-service {
   /* text-align: center; */
   display: flex;
