--- a/client/src/assets/login.css
+++ b/client/src/assets/login.css
@@ -10,6 +10,12 @@
   color: white;
   /* color: #0e0ed1; */
 }
+.login-form .card-admin {
+  /* height: 400px; */
+  background-color: rgba(255, 255, 255, 0.2);
+  color: white;
+  /* color: #0e0ed1; */
+}
 .login_form {
   display: flex;
   flex-direction: column;
@@ -20,6 +26,10 @@
   font-size: 14px;
 }
 .login-form .card-a .input-field {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: white;
+}
+.login-form .card-admin .input-field {
   background-color: rgba(255, 255, 255, 0.2);
   color: white;
 }
