--- a/client/src/assets/app.css
+++ b/client/src/assets/app.css
@@ -124,6 +124,11 @@ ul.links {
   text-align: center;
   font-size: 12px;
 }
+a.grid {
+  text-decoration: none;
+  color: black;
+}
+
 .grid:hover {
   transform: scale(1.04);
   cursor: pointer;
@@ -211,7 +216,7 @@ ul.links {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
-.grid-mask{
+.grid-mask {
   background-color: rgba(0, 0, 0, 0.4);
   height: 200px;
   border-top-left-radius: 10px;
@@ -223,7 +228,7 @@ ul.links {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
-.cate-mask{
+.cate-mask {
   background-color: rgba(0, 0, 0, 0.3);
   height: 100px;
   border-top-left-radius: 10px;
@@ -247,13 +252,13 @@ ul.links {
 .grid-service-body li span {
   display: block;
 }
-.grid-service-body .service-list--left{
+.grid-service-body .service-list--left {
   margin-left: auto;
   font-weight: 600;
   font-size: 10px;
-  color: grey
+  color: grey;
 }
-.service-list--left .green{
+.service-list--left .green {
   color: #077c07;
   display: inline;
 }
