--- a/client/src/assets/householder.css
+++ b/client/src/assets/householder.css
@@ -1,7 +1,7 @@
 .app-container.householder {
   display: flex;
   flex-direction: column;
-  background: #dde6ed;
+  background: #fff;
   gap: 0px;
 }
 nav.householder {
@@ -50,4 +50,63 @@ nav.householder .links a {
 
 .toggle-btn-householder {
   display: none;
+}
+.book--content {
+  background: #5f5e5e;
+  border-radius: 20px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 0 50px;
+  min-height: 50vh;
+}
+.worker-profile {
+  background: #fff;
+  height: 30vh;
+}
+.book-category {
+  background: #fff;
+  height: 50vh;
+}
+.house--content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.worker-profile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.house-ul li .green {
+  font-weight: bold;
+}
+.worker-profile .left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-left: 10px;
+}
+.worker-profile .right {
+  /* display: flex;
+  flex-direction: column; */
+  padding-right: 30px;
+  width: 420px;
+}
+ul.house-right {
+  list-style: none;
+}
+ul.house-right li{
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+.house-h3 {
+  text-align: center;
+  color: #0f171f;
+  font-size: 20px;
+}
+.worker-profile .fa{
+  color:#898b8d;
 }
