--- a/client/src/assets/householder.css
+++ b/client/src/assets/householder.css
@@ -52,7 +52,7 @@ nav.householder .links a {
   display: none;
 }
 .book--content {
-  background: #5f5e5e;
+  background: #fff;;
   border-radius: 20px;
   padding: 2rem;
   display: flex;
@@ -60,10 +60,12 @@ nav.householder .links a {
   gap: 20px;
   margin: 0 50px;
   min-height: 50vh;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .worker-profile {
   background: #fff;
   height: 30vh;
+  border-bottom: 1px solid black;
 }
 .book-category {
   background: #fff;
@@ -88,6 +90,14 @@ nav.householder .links a {
   gap: 10px;
   padding-left: 10px;
 }
+
+.book--category .left {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  gap: 10px;
+  padding-left: 30px;
+}
 .worker-profile .right {
   /* display: flex;
   flex-direction: column; */
@@ -108,5 +118,17 @@ ul.house-right li{
   font-size: 20px;
 }
 .worker-profile .fa{
-  color:#898b8d;
+  color:#646668;
+}
+.categories-photos{
+  display: flex;
+  gap: 5px;
+  flex-wrap: wrap;
+}
+.categories-photos img{
+  display: block;
+  width: 100px;
+  height: 80px;
+  border-radius: 5px;
+
 }
