--- a/client/src/assets/householder.css
+++ b/client/src/assets/householder.css
@@ -191,3 +191,30 @@ ul.house-right li {
   font-weight: bold;
   color: #045504;
 }
+
+/* modal */
+.modal-house {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.modal-house-contents{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 20px;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  position: relative;
+  width: 400px;
+  height: 100vh;
+}
+
+
+/* ... */
