--- a/client/src/assets/householder.css
+++ b/client/src/assets/householder.css
@@ -141,7 +141,6 @@ ul.house-right li {
   flex-direction: column;
   gap: 10px;
   padding-right: 30px;
- 
 }
 .similar-services {
   display: flex;
@@ -159,7 +158,7 @@ ul.house-right li {
   width: 100%;
   cursor: pointer;
 }
-.similar-service:hover{
+.similar-service:hover {
   border: 1px solid black;
 }
 .similar-service.active {
@@ -187,7 +186,7 @@ ul.house-right li {
   align-items: center;
   gap: 3px;
 }
-.similar-title{
+.similar-title {
   font-weight: bold;
   color: #045504;
 }
@@ -204,17 +203,60 @@ ul.house-right li {
   align-items: center;
   justify-content: flex-end;
 }
-.modal-house-contents{
+.modal-house-contents {
   display: flex;
   flex-direction: column;
+  gap: 5px;
   background-color: white;
-  padding: 20px;
+  padding: 20px 20px 0px 20px;
+
   border-bottom-left-radius: 8px;
   border-top-left-radius: 8px;
   position: relative;
   width: 400px;
   height: 100vh;
 }
+.modal-house-contents .modal-header {
+  margin-bottom: 5px;
+}
 
-
-/* ... */
+.time--container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  width: 300px;
+}
+.time--slot {
+  border: 1px solid black;
+  border-radius: 15px;
+  width: 80px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+}
+.time--slot:hover {
+  background-color: rgb(26, 102, 216);
+  color: white;
+  border: 1px solid rgb(26, 102, 216);
+  cursor: pointer;
+}
+.time--slot.clicked {
+  background-color: rgb(26, 102, 216);
+  color: white;
+  border: 1px solid rgb(26, 102, 216);
+}
+.buttons {
+  margin-top: 15px;
+  padding-right: 35px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 5px;
+}
+.time--slot.active {
+  background-color: rgb(201, 205, 211);
+  color: black;
+  border: 1px solid rgb(201, 205, 211);
+  cursor: not-allowed;
+}
