--- a/client/src/assets/householder.css
+++ b/client/src/assets/householder.css
@@ -264,3 +264,20 @@ ul.house-right li {
   position: absolute;
   top: 5%;
 }
+.my-bookings{
+  display: flex;
+  height: 94vh;
+  background-color: white;
+}
+.my-bookings-photo{
+  background-image: url("/images/bg3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 400px;
+}
+.mask--bookings {
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #096609;
+}
