--- a/client/src/assets/dashboard.css
+++ b/client/src/assets/dashboard.css
@@ -305,6 +305,9 @@
   position: absolute;
   top: 0px;
 }
+.notify:hover{
+  cursor: pointer;
+}
 .bell-notify{
   background-color: rgb(240, 90, 90);
   color: white;
