feat: generate filtering reports

--- a/client/src/assets/reports.css
+++ b/client/src/assets/reports.css
@@ -1,8 +1,12 @@
 .reports .view-category-header{
   align-items: baseline;
 }
+.reports .view-category-header.filter{
+  display: flex;
+  align-items:end;
+}
 .fa.report-icon{
-    height: 30px;
+    height: 35px;
     background-color: rgb(34, 122, 34);
     color: white;
 }
